Test extended Jetty Dockerfile run command